--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "mocha",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
+    "@truffle/contract": "^4.3.38",
+    "@truffle/hdwallet-provider": "^1.5.1",
+    "autoprefixer": "^10.3.7",
+    "axios": "^0.20.0",
+    "dotenv": "^10.0.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "fs-extra": "^9.1.0",
+    "ipfs-http-client": "^50.1.2",
+    "postcss": "^8.3.9",
+    "solc": "^0.8.4",
+    "tailwindcss": "^2.2.17",
+    "truffle": "^5.4.15",
+    "web3modal": "^1.9.4"
   }
 }
