--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+#/.next/
+#/out/
 
 # production
 
@@ -33,3 +33,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+#truffle
+truffle-config.js
