--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 #/out/
 
 # production
-
+#/build
 
 # misc
 .DS_Store
@@ -33,6 +33,3 @@ yarn-error.log*
 
 # vercel
 .vercel
-
-#truffle
-truffle-config.js
